{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 909,
  "lineage": "3e3b8f82-f0f6-c3cc-d145-2c4b69caafee",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_Amazon_linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a1ee2fb28fe05df3",
            "arn": "arn:aws:ec2:eu-central-1:352708296901:instance/i-000f46d8ff5fb2e23",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-000f46d8ff5fb2e23",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "alexeymihaylov_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01ae55140a8274407",
            "private_dns": "ip-11-0-3-41.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "11.0.3.41",
            "public_ip": "3.127.148.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fe36529e14ffbc06",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a7e4c68fb15fbebc",
            "tags": {
              "Name": "Alexey_Dima_polybot -client",
              "environment": "tf"
            },
            "tags_all": {
              "Name": "Alexey_Dima_polybot -client",
              "environment": "tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d581a8783558908b"
            ]
          },
          "dependencies": [
            "aws_security_group.EX1_polybot-secure-group",
            "aws_subnet.public-subnet-2b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:352708296901:internet-gateway/igw-00cca36e44f8b7218",
            "id": "igw-00cca36e44f8b7218",
            "owner_id": "352708296901",
            "tags": {
              "Name": "Alexey_Dima_polybot_internet-gateway",
              "environment": "tf"
            },
            "tags_all": {
              "Name": "Alexey_Dima_polybot_internet-gateway",
              "environment": "tf"
            },
            "vpc_id": "vpc-00be87ffb71fa1389"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:352708296901:route-table/rtb-09814c878b3dce6cb",
            "id": "rtb-09814c878b3dce6cb",
            "owner_id": "352708296901",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00cca36e44f8b7218",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Alexey_Dima_polybot_Route Table",
              "environment": "tf"
            },
            "tags_all": {
              "Name": "Alexey_Dima_polybot_Route Table",
              "environment": "tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-00be87ffb71fa1389"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-1-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07800ef976d84c72a",
            "route_table_id": "rtb-09814c878b3dce6cb",
            "subnet_id": "subnet-04cfb6aca3011ba42"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-1a",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-2-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c040592c54e42432",
            "route_table_id": "rtb-09814c878b3dce6cb",
            "subnet_id": "subnet-0a7e4c68fb15fbebc"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet-2b",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "EX1_polybot-secure-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:352708296901:security-group/sg-0d581a8783558908b",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d581a8783558908b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Alexey_Dima_polybot-polybot",
            "name_prefix": "",
            "owner_id": "352708296901",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "tf",
              "Name": "Alexey_Dima_polybot-security_group"
            },
            "tags_all": {
              "Environment": "tf",
              "Name": "Alexey_Dima_polybot-security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-00be87ffb71fa1389"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:352708296901:subnet/subnet-04cfb6aca3011ba42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "11.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04cfb6aca3011ba42",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "352708296901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Alexey_Dima_polybot-public-subnet-1--terraform"
            },
            "tags_all": {
              "Name": "Alexey_Dima_polybot-public-subnet-1--terraform"
            },
            "vpc_id": "vpc-00be87ffb71fa1389"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:352708296901:subnet/subnet-0a7e4c68fb15fbebc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "11.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a7e4c68fb15fbebc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "352708296901",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Alexey_Dima_polybot-public-subnet-2--terraform"
            },
            "tags_all": {
              "Name": "Alexey_Dima_polybot-public-subnet-2--terraform"
            },
            "vpc_id": "vpc-00be87ffb71fa1389"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:352708296901:vpc/vpc-00be87ffb71fa1389",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-039aadb3190ed54a9",
            "default_route_table_id": "rtb-0bbf18f5f395cc4fe",
            "default_security_group_id": "sg-02b86335aacdebc6e",
            "dhcp_options_id": "dopt-0899a470b141cee52",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00be87ffb71fa1389",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bbf18f5f395cc4fe",
            "owner_id": "352708296901",
            "tags": {
              "Name": "Alexey_Dima_polybot-vpc"
            },
            "tags_all": {
              "Name": "Alexey_Dima_polybot-vpc"
            }
          }
        }
      ]
    }
  ]
}